objects/Timesheet_Entries__c/Timesheet_Entries__c.object-meta.xml
<CustomObject>
    <label>Timesheet Entry</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Timesheet Entry No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheet Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>