objects/Timesheet_Entries__c/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Code</label>
    <referenceTo>GL_Code__c</referenceTo>
    <relationshipName>Timesheet_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>