objects/Timesheet_Entries__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <label>Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipName>Job_Timesheets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>