objects/Timesheet_Entries__c/fields/Login_User__c.field-meta.xml
<CustomField>
    <fullName>Login_User__c</fullName>
    <formula>IF( (User__c =  $User.Id) , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Login User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>