objects/Timesheet_Entries__c/fields/Roles__c.field-meta.xml
<CustomField>
    <fullName>Roles__c</fullName>
    <formula>User__r.UserRole.Name</formula>
    <label>Roles</label>
    <type>Text</type>
</CustomField>