objects/Timesheet_Entries__c/fields/Task_Name__c.field-meta.xml
<CustomField>
    <fullName>Task_Name__c</fullName>
    <label>Task Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>