objects/Timesheet_Entries__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Hours_Worked__c</columns>
    <columns>Job__c</columns>
    <columns>Task_Name__c</columns>
    <columns>User__c</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>